# NeoArealize

./: .gitignore  CMakeLists.txt  README.md
analysis/: .gitignore  load.py  load_c.py  loadstuff.py  movie.sh  plot.py  plot1.py  plot2.py  ps_2N0M_final.py  ps_2N0M_plot.py  ps_2N0M_postproc.py  renumber.sh  scanspace.py  sos.py  sos_run.py
configs/: 1N0M.json  1N0M_diffusion.json  21N0M.json  2N0M.json  2N0M_circleincircle.json  2N1M.json  2N1M_0.json  2N1M_1.json  2N1M_horz.json  2N1M_vert.json  2N2M.json  2N3M.json  3N0M.json  3N1M.json  4N0M.json  4N0M_grid.json  4N0M_line.json  4N0M_line_denuc.json  4N0M_line_fgfdup.json  4N1M.json  4N2M.json  4N4M.json  4N4M_2.json  6N0M.json  9N4M.json  c1.json  empty.json  erm.json  erm_brhi_leftlo.json  erm_bullseye.json  erm_bullseye_thirdmode.json  erm_celtic_cross.json  erm_lowmode_ellipse.json  erm_lowmode_ellipseup.json  gm1.json  karb.json  min.json  schnak1.json
configs/enucleate/: 4N0M_line.json  4N0M_line_denuc.json  4N0M_line_fgfdup.json
configs/whiskers/: 25N2M_nocomp.json  25N2M_nogradn.json  25N2M_pluckcol.json  25N2M_pluckone.json  25N2M_pluckrow.json  25N2M_pluckrow_withgradn.json  25N2M_withcomp.json  25N2M_withcomp_realmap.json  25N2M_withgradn.json  3N4M_shallowsteep.json  51N2M_withcomp_realmap.json  5N1M_nocomp.json  5N1M_ordering.json  5N1M_withcomp.json  5N5M_rows.json  5N_boundedorder2.json  5N_ordered.json
configs/whiskers/sandbox/: 21N0M.json  5N_boundedorder.json  5N_boundedorder2.json  5N_boundedorder_exteps.json
labnotes/: .gitignore  README.md  rd_karbowski.sh  rd_karbowski.tex
logs/: .gitignore  ps_2N0M.h5
misc/: findfastest.sh  movie.sh
paper/: .gitignore  barrel_equations.sh  barrel_equations.tex  methods_notes.tex  paper_equations.sh  paper_equations.tex  poster_equations.tex  rd_equation.tex
sim/: CMakeLists.txt  Hex.h  HexGrid.cpp  HexGrid.h  embedded.cpp  erm2.cpp  erm2_hgv.cpp  erm3.cpp  ermentrout.cpp  gm.cpp  guidance_maps.h5  james1.cpp  nn_guidance.py  process.cpp  process_2d_karb_fig4.cpp  process_2d_karb_fig5.cpp  process_2d_karb_fig6.cpp  process_2d_karb_fig8.cpp  process_nogfx.cpp  process_nogfx_doms.cpp  process_nogfx_dvecs.cpp  process_nogfx_nonests.cpp  process_nogfx_subp.cpp  progparams.h  ps_2N0M.cpp  rd_2d_erm.h  rd_2d_karb.h  rd_2d_karb_nogfx.h  rd_2d_karb_nogfx_doms.h  rd_2d_karb_nogfx_dvecs.h  rd_2d_karb_nogfx_nonests.h  rd_2d_karb_nogfx_subp.h  rd_base.h  rd_erm2.h  rd_gm.h  rd_james.h  rd_james_comp1.h  rd_james_comp10.h  rd_james_comp11.h  rd_james_comp12.h  (+24 more)
